--- a/mygames/app/globals.css
+++ b/mygames/app/globals.css
@@ -4,4 +4,8 @@
 
 
 input { @apply w-[400px] border border-gray-200 py-2 px-6 bg-zinc-100/40
-};
+}
+
+body {
+  background-color: rgb(225, 248, 240);
+}
