--- a/mygames/app/globals.css
+++ b/mygames/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 
-input { @apply w-[400px] border border-gray-200 py-2 px-6 bg-zinc-100/40
-}
+/* input { @apply w-[400px] border border-gray-200 py-2 px-6 bg-zinc-100/40
+} */
 @import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
 body {
   background-color: rgb(237, 247, 243);
